--- a/CuidooApp/Cells/InfoCell/InfoCell.xib
+++ b/CuidooApp/Cells/InfoCell/InfoCell.xib
@@ -8,11 +8,11 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="infoCell" rowHeight="373" id="PqJ-fa-vVK" customClass="InfoCell" customModule="CuidooApp" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="373"/>
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="infoCell" rowHeight="362" id="PqJ-fa-vVK" customClass="InfoCell" customModule="CuidooApp" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="414" height="362"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="PqJ-fa-vVK" id="OLa-13-voH">
-                <rect key="frame" x="0.0" y="0.0" width="414" height="373"/>
+                <rect key="frame" x="0.0" y="0.0" width="414" height="362"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="Cfc-EZ-WHE">
@@ -197,7 +197,7 @@
                 <outlet property="favoritesView" destination="yPQ-7T-6Af" id="Rhz-A3-PtX"/>
                 <outlet property="restrictionsButton" destination="pCD-ff-fet" id="RGB-L8-Fe4"/>
             </connections>
-            <point key="canvasLocation" x="202.89855072463769" y="177.12053571428569"/>
+            <point key="canvasLocation" x="202.89855072463769" y="173.4375"/>
         </tableViewCell>
     </objects>
     <resources>
