--- a/CuidooApp/Storyboards/Search.storyboard
+++ b/CuidooApp/Storyboards/Search.storyboard
@@ -74,7 +74,7 @@
                         <barButtonItem key="rightBarButtonItem" image="person.crop.circle" catalog="system" id="inK-Y6-fla">
                             <color key="tintColor" red="1" green="0.38701313729999998" blue="0.3767012656" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <connections>
-                                <segue destination="MNg-Fq-qgL" kind="show" id="a6k-xF-Fqw"/>
+                                <segue destination="MNg-Fq-qgL" kind="presentation" modalPresentationStyle="fullScreen" id="a6k-xF-Fqw"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
