--- a/CuidooApp/Storyboards/Search.storyboard
+++ b/CuidooApp/Storyboards/Search.storyboard
@@ -81,7 +81,7 @@
                     <connections>
                         <outlet property="searchButton" destination="9z5-u0-nMU" id="l38-Wd-r80"/>
                         <outlet property="searchTableView" destination="jXd-NC-Slu" id="xdu-FV-bQa"/>
-                        <segue destination="68C-0S-Vgb" kind="presentation" identifier="goToRequestScene" modalPresentationStyle="fullScreen" id="SBW-N4-11v"/>
+                        <segue destination="68C-0S-Vgb" kind="presentation" identifier="goToWaitingScene" modalPresentationStyle="fullScreen" id="SBW-N4-11v"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Q2m-qT-mcr" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -98,10 +98,10 @@
             </objects>
             <point key="canvasLocation" x="-219" y="885"/>
         </scene>
-        <!--Request-->
+        <!--WaitingSearch-->
         <scene sceneID="kyQ-EM-2pv">
             <objects>
-                <viewControllerPlaceholder storyboardName="Request" id="68C-0S-Vgb" sceneMemberID="viewController">
+                <viewControllerPlaceholder storyboardName="WaitingSearch" id="68C-0S-Vgb" sceneMemberID="viewController">
                     <navigationItem key="navigationItem" id="tqM-GJ-Xxl"/>
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="OzP-xx-E3s" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
