--- a/CuidooApp/Babysitter/Storyboards/ProfileBabysitter.storyboard
+++ b/CuidooApp/Babysitter/Storyboards/ProfileBabysitter.storyboard
@@ -79,8 +79,8 @@
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" image="person.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="qwz-Ci-3wt">
-                                                    <rect key="frame" x="16" y="8.5" width="27" height="27"/>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" image="person" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="qwz-Ci-3wt">
+                                                    <rect key="frame" x="16" y="8.5" width="27" height="27.5"/>
                                                     <color key="tintColor" red="1" green="0.34509803919999998" blue="0.34509803919999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="27" id="Ij9-LT-w0E"/>
@@ -256,7 +256,7 @@
         <image name="doc.text.magnifyingglass" catalog="system" width="58" height="64"/>
         <image name="gear" catalog="system" width="64" height="58"/>
         <image name="mom" width="842" height="782"/>
-        <image name="person.fill" catalog="system" width="64" height="60"/>
+        <image name="person" catalog="system" width="64" height="58"/>
         <image name="questionmark.circle" catalog="system" width="64" height="60"/>
     </resources>
 </document>
