--- a/CuidooApp/Mom/Storyboards/Profile.storyboard
+++ b/CuidooApp/Mom/Storyboards/Profile.storyboard
@@ -87,7 +87,7 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
-                                            <segue destination="bDc-zu-Lqt" kind="show" id="Zlr-02-CRb"/>
+                                            <segue destination="bDc-zu-Lqt" kind="show" id="Rhk-9E-0Io"/>
                                         </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="tableCellHistory" id="Qr7-5r-HXg">
@@ -215,7 +215,9 @@
                             <outlet property="delegate" destination="JiP-1q-4rA" id="Vwm-sc-0iu"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Nome" id="CaU-hK-MLo"/>
+                    <navigationItem key="navigationItem" title="Nome" id="CaU-hK-MLo">
+                        <barButtonItem key="backBarButtonItem" title="voltar" id="DUj-Z8-7zn"/>
+                    </navigationItem>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
                         <outlet property="nameLabel" destination="ACm-t6-ugi" id="NsY-hK-wAJ"/>
@@ -224,7 +226,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vx7-WO-Rfq" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-303" y="62"/>
+            <point key="canvasLocation" x="1515.9420289855075" y="61.607142857142854"/>
         </scene>
         <!--History-->
         <scene sceneID="U8u-Uf-NvX">
@@ -234,7 +236,7 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="k6F-ma-oC2" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="351" y="-9"/>
+            <point key="canvasLocation" x="2170.289855072464" y="-9.375"/>
         </scene>
         <!--Support-->
         <scene sceneID="5U9-z7-Ekm">
@@ -244,7 +246,7 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lhr-Cg-xbl" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="355" y="25"/>
+            <point key="canvasLocation" x="2172.463768115942" y="24.776785714285712"/>
         </scene>
         <!--Bio-->
         <scene sceneID="6Ug-KM-2Xl">
@@ -254,7 +256,7 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6c0-Kh-bj8" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="351" y="-47"/>
+            <point key="canvasLocation" x="2171.0144927536235" y="-47.544642857142854"/>
         </scene>
         <!--Config-->
         <scene sceneID="XXm-Ga-WMl">
@@ -264,7 +266,7 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aif-dq-nGL" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="361" y="62"/>
+            <point key="canvasLocation" x="2181.1594202898555" y="61.607142857142854"/>
         </scene>
     </scenes>
     <resources>
