--- a/CuidooApp/Storyboards/Search.storyboard
+++ b/CuidooApp/Storyboards/Search.storyboard
@@ -70,11 +70,10 @@
                         <viewLayoutGuide key="safeArea" id="p1P-hf-pNX"/>
                     </view>
                     <navigationItem key="navigationItem" title="Cuidoo" id="Jab-k6-Wd2">
-                        <barButtonItem key="backBarButtonItem" title=" " id="l2s-km-THx"/>
                         <barButtonItem key="rightBarButtonItem" image="person.crop.circle" catalog="system" id="inK-Y6-fla">
                             <color key="tintColor" red="1" green="0.38701313729999998" blue="0.3767012656" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <connections>
-                                <segue destination="MNg-Fq-qgL" kind="show" id="a6k-xF-Fqw"/>
+                                <segue destination="lvC-rN-MPn" kind="presentation" modalPresentationStyle="fullScreen" id="GOW-A5-Fs3"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -86,17 +85,15 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Q2m-qT-mcr" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-145" y="82"/>
+            <point key="canvasLocation" x="-917.39130434782612" y="884.59821428571422"/>
         </scene>
         <!--Profile-->
-        <scene sceneID="aZA-d0-h3x">
+        <scene sceneID="ey2-SG-2jH">
             <objects>
-                <viewControllerPlaceholder storyboardName="Profile" id="MNg-Fq-qgL" sceneMemberID="viewController">
-                    <navigationItem key="navigationItem" id="m9d-7B-HVu"/>
-                </viewControllerPlaceholder>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="bf7-9c-vls" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <viewControllerPlaceholder storyboardName="Profile" id="lvC-rN-MPn" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="L4x-rF-hwl" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-336" y="483"/>
+            <point key="canvasLocation" x="-216" y="743"/>
         </scene>
         <!--WaitingSearch-->
         <scene sceneID="kyQ-EM-2pv">
@@ -106,7 +103,7 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="OzP-xx-E3s" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3" y="483"/>
+            <point key="canvasLocation" x="-301" y="1024"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="mSN-Xx-Oge">
